--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -19,12 +19,14 @@
   
 </div>
 
+
+<!-- TEMPORARY TODO LIST -->
 <div>
     <hr>
         <ul class="todoList">
             <h3>TODO List</h3>
-            <li *ngFor="let todo of todos">
-                <span class="todoItem">{{todo.item}}</span>
+            <li *ngFor="let item of todo">
+                <span class="todoItem">{{item.item}}</span>
             </li>
         </ul>
 </div>
