--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <h1>{{title}}</h1>
-<app-listen></app-listen>
-
+<nav>
+    <a routerLink='/dashboard'>Home</a>
+    <a routerLink='/listen'>Tune</a>
+</nav>
 <router-outlet></router-outlet>
+<!-- <app-listen></app-listen> -->
+
