Moved todo-list to be persisting cause I need it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <h1>{{title}}</h1>
 <nav>
     <a routerLink='/dashboard'>Home</a>
-    <a routerLink='/listen'>Tune</a>
+    <a routerLink='/listen'>All Instruments</a>
 </nav>
 <router-outlet></router-outlet>
+<app-todo-list></app-todo-list>
 <!-- <app-listen></app-listen> -->
 
