--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
-h1 {
-  color: #f8b800  ;
+
+/* Credits to Amadou Sall - amadousall.com */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* h1 {
+  color: #1F2C0F  ;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
   
 }
 h2, h3 {
-  color: #f0d0b0;
+  color: #1F2C0F;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
@@ -15,14 +22,14 @@ body {
   margin: 2em;
 }
 body, input[type="text"], button {
-  color: #a4e4fc;
+  color: #081C25;
   font-family: Cambria, Georgia, serif;
 }
-/* everywhere else */
+
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-  background-color:dimgray;
-}
+  background-color:#f3ebde;
+} */
