--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,37 @@
+@layer base {
+    button {
+        @apply 
+        px-4 py-1
+        font-medium font-semibold 
+        text-gray-700 bg-yellow-600 
+        rounded-full shadow-lg
+        hover:bg-yellow-300 hover:text-gray-900
+        focus:outline-none
+        focus:ring-2
+        focus:ring-offset-2
+        focus:ring-green-600
+        inline-flex
+        items-center
+        text-base
+        
+        
+        ;
+
+    }
+}
+
+/* py-2 
+px-4 
+font-semibold 
+rounded-lg 
+shadow-md 
+text-white 
+bg-yellow-500 
+hover:bg-yellow-700 */
+
+
+/* 
+
 h1 {
     margin-bottom: 0;
 }
@@ -23,4 +57,4 @@ nav a:hover {
 
 nav a.active {
     background-color: black;
-}
+} */
