--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,3 +1,6 @@
+
+
+/*
 h2 {
     text-align: center;
 }
@@ -7,7 +10,6 @@ h2 {
     margin: auto;
     max-width: 100%;
 
-    /* flexbox */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -32,7 +34,6 @@ a {
 
     cursor: pointer;
 
-    /* flex box */
     order: 0;
     flex: 0 1 auto;
     align-self: auto;
@@ -48,3 +49,4 @@ a {
 a:hover {
     background-color: #000;
 }
+*/
