--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,38 @@
-<h2>Common Instruments</h2>
+<app-listen>
 
-<div class="instruments-menu">
-    <a *ngFor="let instrument of instruments"
-        routerLink=" ">
-        {{instrument.name}}
-    </a>
+</app-listen>
+
+<div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+
+    <h2 class="text-base text-yellow-700 font-semibold tracking-wide uppercase justify-start relative">
+        Choose another pre-set
+        instrument below:
+    </h2>
+
+    <div class="relative">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex justify-start items-center border-b-2 border-gray-100 py-6 md:justify-start md:space-x-10">
+
+                <nav class="md:flex space-x-10">
+                    <button *ngFor="let instrument of instruments" routerLink="" class="
+                    px-4 py-1
+                    font-medium font-semibold 
+                    text-gray-700 bg-yellow-600 
+                    rounded-full shadow-lg
+                    hover:bg-yellow-300 hover:text-gray-900
+                    focus:outline-none
+                    focus:ring-2
+                    focus:ring-offset-2
+                    focus:ring-green-600
+                    inline-flex
+                    items-center
+                    text-base">
+                        <a class="md:flex space-x-10">
+                            {{instrument.name}}
+                        </a>
+                    </button>
+                </nav>
+            </div>
+        </div>
+    </div>
 </div>
