--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,10 +1,34 @@
-<!-- TEMPORARY TODO LIST -->
-<div>
-    <hr>
-        <ul class="todoList">
-            <h3>TODO List</h3>
-            <li *ngFor="let todo of todos">
-                <span class="todoItem">{{todo.item}}</span>
-            </li>
-        </ul>
+<!-- TODO LIST https://tailwindui.com/components/marketing/sections/feature-sections -->
+<div class="py-12 bg-white">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="lg:text-center">
+
+            <h2 class="text-base text-yellow-700 font-semibold tracking-wide uppercase">Work in progress...</h2>
+
+            <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-green-700 sm:text-4xl">
+                TODO List
+            </p>
+
+            <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
+                Goal: Process sound into frequency, output the pitch in the chromatic scale, determine closest note to
+                selected instrument tuning, then display distance away of played frequency.
+            </p>
+            
+        </div>
+
+        <div class="mt-10">
+            <dl class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
+                <div class="relative">
+                    <p class="ml-16 text-lg leading-6 font-medium text-gray-900" *ngFor="let todo of todos;">
+                        {{todos.indexOf(todo)+1}}: {{todo.item}}
+                        <dd class="mt-2 ml-16 text-base text-gray-500 relative">
+                            Description: {{todo.description}}
+                        </dd>
+
+                    </p>
+                </div>
+            </dl>
+        </div>
+
+    </div>
 </div>
