--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,19 +14,22 @@
             <div class="flex justify-start items-center border-b-2 border-gray-100 py-6 md:justify-start md:space-x-10">
 
                 <nav class="md:flex space-x-10">
-                    <button *ngFor="let instrument of instruments" routerLink="" class="
-                    px-4 py-1
-                    font-medium font-semibold 
-                    text-gray-700 bg-yellow-600 
-                    rounded-full shadow-lg
-                    hover:bg-yellow-300 hover:text-gray-900
-                    focus:outline-none
-                    focus:ring-2
-                    focus:ring-offset-2
-                    focus:ring-green-600
-                    inline-flex
-                    items-center
-                    text-base">
+                    <button 
+                    *ngFor="let instrument of instruments" 
+                    routerLink="" 
+                    class="
+                        px-4 py-1
+                        font-medium font-semibold 
+                        text-gray-700 bg-yellow-600 
+                        rounded-full shadow-lg
+                        hover:bg-yellow-300 hover:text-gray-900
+                        focus:outline-none
+                        focus:ring-2
+                        focus:ring-offset-2
+                        focus:ring-green-600
+                        inline-flex
+                        items-center
+                        text-base">
                         <a class="md:flex space-x-10">
                             {{instrument.name}}
                         </a>
