--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -1,20 +1,44 @@
 
 <!-- text-base text-yellow-700 font-semibold tracking-wide uppercase justify-start relative -->
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex-row space-x-10">
-    <div><p class="uppercase font-bold text-gray-900 ">Instrument: {{currentInstrument.name}}</p></div>
-    <p class="uppercase font-bold text-gray-900">Tuning: {{currentInstrument.tuning}}</p>
-            
+    <div>
+        <p class="uppercase font-bold text-gray-900 ">Instrument: {{currentInstrument.name}}</p>
+        <p class="uppercase font-bold text-gray-900">Tuning: {{currentInstrument.tuning}}</p>
+    </div>
+    
 </div>
 
 <main>
-    
     <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
-        <!-- Replace with your content -->
         <div class="px-4 py-6 sm:px-0">
             <div class="border-4 border-gray-200 rounded-lg h-96 flex-row space-y-2">
-                <h2 class="font-semibold">Standard Tuning: </h2><p>{{currentNote.notation}}, frequency: {{currentNote.frequency}}, wavelength: {{currentNote.wavelength}}</p>
                 
-                <h2 class="font-semibold">Tuning for: </h2> <p>{{currentInstrument.tuningOctaves}}</p>
+                <!-- <h2 class="font-semibold">Standard Tuning: </h2>
+                <p>{{currentNote.notation}}, frequency: {{currentNote.frequency}}, wavelength: {{currentNote.wavelength}}</p>
+
+                <br>
+
+                <h2 class="font-semibold">Tuning for: </h2> 
+                <p>{{currentInstrument.tuningOctaves}}</p>
+                <p>Freq of -9 half steps: {{calcNoteTest}}</p>
+
+                <br> -->
+
+                <!-- CAPTURE AUDIO HERE -->
+                <h2 class="font-semibold">I am hearing: </h2> 
+                <audio id="player" controls></audio>
+                
+                <input type="range" min="1" max="40">
+
+                <pre></pre>
+
+                <p>Biquad filter frequency response for: </p>
+                <ul class="freq-response-output">
+                </ul>
+
+                <!-- <p>Volume</p>
+                <input id="volume" type="range" min="0" max="1" step="0.1" value="0.5"/>         -->
+
             </div>
         </div>
         <!-- /End replace -->
