--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
 </app-listen>
 
-<div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+<!-- <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
 
     <h2 class="text-base text-yellow-700 font-semibold tracking-wide uppercase justify-start relative">
         Choose another pre-set
@@ -35,7 +35,8 @@
                         </a>
                     </button>
                 </nav>
+                
             </div>
         </div>
     </div>
-</div>
+</div> -->
