rewrote Scale class implementation and child eQScale class for equal temp scale.

--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -41,9 +41,8 @@
                 </ul> -->
 
                 <p>Your frequency response: </p>
-                <p class="user-freq-response-output">
-                </p>
-
+                <p class="user-freq-response-output">TODO - I convert your audio to frequency</p>
+                
                 <!-- <p>Volume</p>
                 <input id="volume" type="range" min="0" max="1" step="0.1" value="0.5"/>         -->
 
