Cleaning up code while having a hard time figuring out pitch detection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
                 <nav class="md:flex space-x-10">
                     <div class="relative">
                         <button><a routerLink='/dashboard'>Home</a></button>
-                        <button><a routerLink='/instruments'>All Instruments</a></button>
-                        <button><a routerLink='/dashboard'>About</a></button>
+                        <!-- <button><a routerLink='/instruments'>All Instruments</a></button> -->
+                        <!-- <button><a routerLink='/dashboard'>About</a></button> -->
                         <button><a routerLink='/todo-list'>To-Do List</a></button>
                     </div>
                 </nav>
