Pitch detection is working in console

--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -47,7 +47,7 @@
 
                 <!-- CAPTURE AUDIO HERE -->
                 <!-- Media Player and input output devices-->    
-                <h2 class="font-semibold">I am hearing YOU: </h2> 
+                <h2 class="font-semibold">Press 'Play' to hear yourself: </h2> 
                 <audio id="player" controls></audio>
                 <p id=".audioDevices"></p>
 
